<resources>
    <string name="app_name">PasswordVault</string>
    <string name="password_vault">Password Vault</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="msg_error_User">Add at least 3 or less than 12 letters</string>
    <string name="msg_error_Password">password must contain at least 8 characters</string>
    <string name="msg_please_fill_in_all_fields">Please fill in all fields</string>
    <string name="msg_savedData">Registered</string>
    <string name="name_with_up_to_9_characters">Name with up to 9 characters</string>
    <string name="generate_password">Generate password</string>
    <string name="save">Save</string>
    <string name="dont_you_have_a_login_click_here">Dont have a login?</string>
    <string name="already_have_a_login_click_here">Already have a login? Click here</string>
</resources>