<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="411dp"
        android:layout_height="431dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@+id/logoPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Username"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#888888" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:backgroundTint="#000000"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/logoPassword2"
        android:layout_width="224dp"
        android:layout_height="242dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logopassword_nobackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
