<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0F6"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/logoPassword"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logopassword_nobackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="393dp"
        android:layout_height="548dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_register"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPassword"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tittleSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Username"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#888888" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:backgroundTint="#000000"
            android:text="@string/create_account"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

